@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-02T08:27:53Z",
-  "count_outdated" : 156,
-  "uniques_outdated" : 41,
-  "count" : 184,
+  "timestamp" : "2022-10-03T01:55:56Z",
+  "count_outdated" : 158,
+  "uniques_outdated" : 42,
+  "count" : 185,
   "uniques" : 56,
   "clones" : [
-    {
-      "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-19T00:00:00Z",
       "count": 2,
