@@ -1,3 +1,11 @@
+2022-10-03T01:55:56Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3170996361
+* notice: last 14d: unq all: 1 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 41 156 / 56 184
+* notice: next accum: outdated-unq outdated-all / unq all: 42 158 / 56 185
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-18] / []
+
 2022-10-02T08:27:53Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167894060
 * notice: last 14d: unq all: 1 28
